tests/error/compile/header_align_invalid.wks
# @desc: Invalid :header-align value is rejected

# @expect-error: Invalid :header-align value

:header-align "middle"

a "cmd" +write %{{echo a}}
